objects/OF_Listino__c.object
<CustomObject>
    <fields>
        <fullName>ID_Prod__c</fullName>
        <externalId>true</externalId>
        <label>ID Prod</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Attivo__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Attivo</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_ClusterPromozione__c</fullName>
        <label>Cluster Promozione</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CodiceProgettoSpeciale__c</fullName>
        <label>Codice Progetto Speciale</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_CommercialElement__c</fullName>
        <formula>IF(
OF_ServizioBillingElement__c != null, OF_ServizioBillingElement__r.OF_BillingElement__r.OF_CommercialElement__r.Name,
   IF(
     PO_Servizio_Billing_Element_Fattibilita__c != null, 
     PO_Servizio_Billing_Element_Fattibilita__r.OF_BillingElement__r.OF_CommercialElement__r.Name,
     &apos;&apos;)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Commercial element</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_DataFineValidita__c</fullName>
        <label>Data fine validità</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_DataInizioValidita__c</fullName>
        <label>Data inizio validità</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>OF_IDContract__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>ID Contract</label>
        <referenceTo>Contract</referenceTo>
        <relationshipLabel>Listini</relationshipLabel>
        <relationshipName>Listini</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_ListinoDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Listino Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OF_ProgettoSpeciale__c</fullName>
        <label>Progetto Speciale</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_Promozione__c</fullName>
        <label>Promozione</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_ServizioBillingElement__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Billing Element</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>$Source.OF_IDContract__c</field>
                <operation>equals</operation>
                <valueField>OF_ServizioBillingElement__c.OF_Contract__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>OF_ServizioBillingElement__c</referenceTo>
        <relationshipLabel>Listini</relationshipLabel>
        <relationshipName>Listini</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>OF_Servizio__c</fullName>
        <formula>IF( 
OF_ServizioBillingElement__c != null, OF_ServizioBillingElement__r.OF_BillingElement__r.OF_CommercialElement__r.OF_Servizio__r.Name, 
 IF( 
 PO_Servizio_Billing_Element_Fattibilita__c != null, 
 PO_Servizio_Billing_Element_Fattibilita__r.OF_BillingElement__r.OF_CommercialElement__r.OF_Servizio__r.Name, 
 &apos;&apos;) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Servizio</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OF_TipologiaApparato__c</fullName>
        <label>Tipologia Apparato</label>
        <length>160</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PO_Servizio_Billing_Element_Fattibilita__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servizio Billing Element</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 OR 2 OR 3 OR 4 OR 5</booleanFilter>
            <filterItems>
                <field>OF_ServizioBillingElement__c.OF_ServizioNome__c</field>
                <operation>equals</operation>
                <value>IRU</value>
            </filterItems>
            <filterItems>
                <field>OF_ServizioBillingElement__c.OF_ServizioNome__c</field>
                <operation>equals</operation>
                <value>P2P Base</value>
            </filterItems>
            <filterItems>
                <field>OF_ServizioBillingElement__c.OF_ServizioNome__c</field>
                <operation>equals</operation>
                <value>Fiber Link</value>
            </filterItems>
            <filterItems>
                <field>OF_ServizioBillingElement__c.OF_ServizioNome__c</field>
                <operation>equals</operation>
                <value>Fiber Lease</value>
            </filterItems>
            <filterItems>
                <field>OF_ServizioBillingElement__c.OF_ServizioNome__c</field>
                <operation>equals</operation>
                <value>P2P Attiva</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>OF_ServizioBillingElement__c</referenceTo>
        <relationshipLabel>Listini (Servizio Billing Element)</relationshipLabel>
        <relationshipName>Listini1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servizio__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Servizio</label>
        <referenceTo>OF_Servizio__c</referenceTo>
        <relationshipLabel>Listini</relationshipLabel>
        <relationshipName>Listini</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Listino</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>OF_ServizioBillingElement__c</columns>
        <columns>OF_CommercialElement__c</columns>
        <columns>OF_ListinoDefault__c</columns>
        <columns>OF_IDContract__c</columns>
        <columns>OF_Attivo__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P2P</fullName>
        <columns>NAME</columns>
        <columns>OF_ServizioBillingElement__c</columns>
        <columns>OF_CommercialElement__c</columns>
        <columns>OF_ListinoDefault__c</columns>
        <columns>OF_IDContract__c</columns>
        <columns>OF_Attivo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>OF_Servizio__c</field>
            <operation>equals</operation>
            <value>P2P Base</value>
        </filters>
        <label>P2P</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>P2P_Attiva</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>OF_Attivo__c</columns>
        <columns>OF_ListinoDefault__c</columns>
        <columns>OF_DataInizioValidita__c</columns>
        <columns>OF_DataFineValidita__c</columns>
        <columns>Servizio__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Servizio__c</field>
            <operation>equals</operation>
            <value>P2P Attiva</value>
        </filters>
        <label>P2P Attiva</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Listino Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Listini</pluralLabel>
    <recordTypes>
        <fullName>Extra</fullName>
        <active>true</active>
        <label>Extra</label>
    </recordTypes>
    <recordTypes>
        <fullName>Kit</fullName>
        <active>true</active>
        <label>OF_Kit</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_GPON_Passiva</fullName>
        <active>true</active>
        <label>GPON Passiva</label>
    </recordTypes>
    <recordTypes>
        <fullName>OF_Open_Stream</fullName>
        <active>true</active>
        <label>Open Stream</label>
    </recordTypes>
    <recordTypes>
        <fullName>PO_Fattibilita</fullName>
        <active>true</active>
        <label>Fattibilità</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>OF_DataInizioFine</fullName>
        <active>true</active>
        <errorConditionFormula>OF_DataFineValidita__c &lt; OF_DataInizioValidita__c</errorConditionFormula>
        <errorMessage>La data di fine validità non può essere minore della data di inizio validità</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>OF_Servizio</fullName>
        <active>false</active>
        <errorConditionFormula>LOWER(OF_ServizioBillingElement__r.OF_ServizioNome__c)  !=  LOWER(RecordType.Name)</errorConditionFormula>
        <errorDisplayField>OF_ServizioBillingElement__c</errorDisplayField>
        <errorMessage>Il Billing Element selezionato non appartiene al servizio del listino che si sta configurando</errorMessage>
    </validationRules>
</CustomObject>